# mcp-sandbox

./: README.md  pyproject.toml
docs/: docs.md  sequence_diagram.puml
examples/: client_stdio.py  helper.py  server.py
